
config("glfw_config") {
  include_dirs = [
    "include",
    "deps",
  ]
  defines = [
    "_GLFW_USE_CONFIG_H",
  ]
  libs = [
    "X11",
  ]
}

static_library("glfw") {
  sources = [
    "src/internal.h",
    "src/mappings.h",
    "include/GLFW/glfw3.h",
    "include/GLFW/glfw3native.h",
    
    "src/x11_platform.h",
    "src/xkb_unicode.h",
    "src/posix_time.h",
    "src/posix_thread.h",
    "src/glx_context.h",
    "src/egl_context.h",
    "src/osmesa_context.h",
    "src/linux_joystick.h",
    "deps/glad/glad.h",
    
    "src/x11_init.c",
    "src/x11_monitor.c",
    "src/x11_window.c",
    "src/xkb_unicode.c",
    "src/posix_time.c",
    "src/posix_thread.c",
    "src/glx_context.c",
    "src/egl_context.c",
    "src/osmesa_context.c",
    "src/linux_joystick.c",
    "deps/glad.c",
    
    "src/context.c",
    "src/init.c",
    "src/input.c",
    "src/monitor.c",
    "src/vulkan.c",
    "src/window.c",
  ]
  public_configs = [ ":glfw_config" ]
}

executable("boing") {
  sources = [ "examples/boing.c" ]
  deps = [ ":glfw" ]
}

executable("gears") {
  sources = [ "examples/gears.c" ]
  deps = [ ":glfw" ]
}

executable("heightmap") {
  sources = [ "examples/heightmap.c" ]
  deps = [ ":glfw" ]
}

executable("offscreen") {
  sources = [ "examples/offscreen.c" ]
  deps = [ ":glfw" ]
}

executable("sharing") {
  sources = [ "examples/sharing.c", "deps/tinycthread.c", "deps/tinycthread.h" ]
  deps = [ ":glfw" ]
}

executable("simple") {
  sources = [ "examples/simple.c" ]
  deps = [ ":glfw" ]
}

executable("splitview") {
  sources = [ "examples/splitview.c" ]
  deps = [ ":glfw" ]
}

executable("wave") {
  sources = [ "examples/wave.c" ]
  deps = [ ":glfw" ]
}

